[package]
name = "corona-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
parking_lot = "0.10.0"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.2"
#Postgres access library

sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres","offline", "chrono" ] }
chrono = {version="0.4.11", features=["serde"]}
openssl = { version = "0.10", features = ["vendored"]}
dotenv = "0.15.0"